--- a/order.css
+++ b/order.css
@@ -62,6 +62,18 @@ header{
     
 }
 
+
+.current-user p {
+  margin-left: 1090px;
+  text-align: left;
+  font-size: 13px;
+  color: wheat;
+  font-weight: 500;
+  font-family: 'Poppins', sans-serif;
+  cursor: default;
+
+}
+
 .cart {
     display: flex;
     background-color: white;
@@ -90,6 +102,7 @@ header{
     color: white;
     font-weight: bold;
     font-size: 15px;
+    cursor: default;
 }
 
 .container {
@@ -112,10 +125,10 @@ header{
 }
 
 .sidebar {
-    width: 40%;
+    width: 50%;
     border-radius: 5px;
     background-color: rgb(255, 255, 255);
-    margin-left: 20px;
+    margin-left: 80px;
     padding: 15px;
     text-align: center;
     box-shadow: inset 0 0 2px 0 rgba(255,255,255,.4),
@@ -145,11 +158,20 @@ header{
 
 .cartItem {
   display: grid;
-  grid-template-columns: 50px 120px 60px 130px 5px;
-  gap: 3px 4px 4px 2px 0px;
+  grid-template-columns: 50px 130px 50px 60px 100px 5px;
+  gap: 3px 4px 2px 4px 2px 0px;
   text-align:center;
   align-items: center;
   overflow: auto;
+}
+
+.cartItem .selection {
+  font-size: 12px;
+  color: #da740e;
+  font-weight: 500;
+
+  
+
 }
 
 .cartItem .quantity span {
