--- a/order.css
+++ b/order.css
@@ -364,7 +364,7 @@ header{
   margin-left: 50px;
 }
 
-#tall {
+#tall, #solo {
   background-color: #f49333;
   margin-right: 10px;
   margin-top: 5px;
@@ -382,12 +382,12 @@ header{
   letter-spacing: 1px;
 }
 
-#tall:hover {
+#tall:hover, #solo:hover {
   font-weight: bold;
   box-shadow: 1px 2px 1px rgb(126, 118, 109);
 }
 
-#grande {
+#grande, #box {
   background-color: #f49333;
   margin-top: 4px;
   padding-right: 5px;
@@ -403,7 +403,7 @@ header{
   letter-spacing: 1px;
 }
 
-#grande:hover {
+#grande:hover, #box:hover {
   font-weight: bold;
   box-shadow: 1px 2px 1px rgb(126, 118, 109);
 }
