--- a/order.css
+++ b/order.css
@@ -156,13 +156,21 @@ header{
 
 }
 
+#items {
+  max-height: 350px;
+  overflow-y: auto;
+  scwidth: ;
+}
+
+#items::-webkit-scrollbar {
+  width: 4px;
+}
 .cartItem {
   display: grid;
-  grid-template-columns: 50px 130px 50px 60px 100px 5px;
-  gap: 3px 4px 2px 4px 2px 0px;
+  grid-template-columns: 50px 110px 40px 60px 80px 5px;
+  column-gap: 10px;
   text-align:center;
   align-items: center;
-  overflow: auto;
 }
 
 .cartItem .selection {
@@ -205,23 +213,6 @@ header{
   background-color: white;
 }
 
-.cartItem::-webkit-scrollbar {
-  width: 5px;
-
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px  rgb(185, 105, 30); 
-    border-radius: 10px;
-  }
- 
-  ::-webkit-scrollbar-thumb {
-    background: rgb(149, 143, 132);
-    border-radius: 10px;
-  }
-
-  ::-webkit-scrollbar-thumb:hover {
-    background:  rgb(185, 105, 30);   
-  }
-}
 
 .cartItem .remove a i{
   cursor: pointer;
